# GeometryBattles

./: CMakeLists.txt  README.md  main.cpp
dependencies/ProjectSane/includes/: game.h
dependencies/ProjectSane/includes/buffers/: indexbuffer.h  vertexbuffer.h
dependencies/ProjectSane/includes/camera/: camera.h
dependencies/ProjectSane/includes/contexts/: context.h
dependencies/ProjectSane/includes/drawable/: drawable.h  model.h  rectangle.h  triangle.h
dependencies/ProjectSane/includes/drawable/renderers/: batch.h  instanced.h  layer.h
dependencies/ProjectSane/includes/ecs/: ecsmanager.h  icomponent.h  ientity.h  isystem.h
dependencies/ProjectSane/includes/ecs/components/: batchedcomponent.h  bboxcomponent.h  cameracomponent.h  instancedcomponent.h  shadercomponent.h  texturecomponent.h  vertexcomponent.h
dependencies/ProjectSane/includes/ecs/entities/: drawableentity.h  shadowentity.h
dependencies/ProjectSane/includes/ecs/systems/: renderingsystem.h  shadowsystem.h
dependencies/ProjectSane/includes/lights/: point.h  spot.h
dependencies/ProjectSane/includes/managers/: contextmanager.h  memorymanager.h  shadermanager.h  soundmanager.h  texturemanager.h  windowmanager.h
dependencies/ProjectSane/includes/ps/: gamebase.h
dependencies/ProjectSane/includes/ps/drawable/: model.h  triangle.h
dependencies/ProjectSane/includes/ps/drawable/renderers/: instanced.h  layer.h
dependencies/ProjectSane/includes/ps/ecs/: icomponent.h  isystem.h
dependencies/ProjectSane/includes/ps/ecs/components/: bboxcomponent.h
dependencies/ProjectSane/includes/ps/managers/: contextmanager.h  shadermanager.h
dependencies/ProjectSane/includes/shaders/: shader.h
dependencies/ProjectSane/includes/textures/: texture.h
dependencies/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
dependencies/independent/ProjectSane/engine/: game.h
dependencies/independent/ProjectSane/engine/buffers/: indexbuffer.h  vertexbuffer.h
dependencies/independent/ProjectSane/engine/camera/: camera.h
dependencies/independent/ProjectSane/engine/contexts/: context.h
dependencies/independent/ProjectSane/engine/drawable/: drawable.h  model.h  rectangle.h  triangle.h
dependencies/independent/ProjectSane/engine/drawable/renderers/: batch.h  instanced.h  layer.h
dependencies/independent/ProjectSane/engine/ecs/: ecsmanager.h  icomponent.h  ientity.h  isystem.h
dependencies/independent/ProjectSane/engine/ecs/components/: batchedcomponent.h  bboxcomponent.h  cameracomponent.h  instancedcomponent.h  shadercomponent.h  texturecomponent.h  vertexcomponent.h
dependencies/independent/ProjectSane/engine/ecs/entities/: drawableentity.h  shadowentity.h
dependencies/independent/ProjectSane/engine/ecs/systems/: batchsystem.h  renderingsystem.h  shadowsystem.h
dependencies/independent/ProjectSane/engine/lights/: point.h  spot.h
dependencies/independent/ProjectSane/engine/managers/: contextmanager.h  memorymanager.h  shadermanager.h  soundmanager.h  texturemanager.h  windowmanager.h
dependencies/independent/ProjectSane/engine/shaders/: shader.h
dependencies/independent/ProjectSane/engine/textures/: texture.h
dependencies/independent/ProjectSane/engine/utils/: fileloader.h  keyhandler.h  mousehandler.h  timer.h
dependencies/linux/ProjectSane/includes/ps/buffers/: indexbuffer.h  vertexbuffer.h
dependencies/linux/ProjectSane/includes/ps/drawable/: drawable.h  rectangle.h
dependencies/linux/ProjectSane/includes/ps/ecs/: ecsmanager.h
dependencies/linux/ProjectSane/includes/ps/managers/: contextmanager.h  memorymanager.h  shadermanager.h  windowmanager.h
dependencies/linux/ProjectSane/includes/ps/textures/: texture.h
dependencies/linux/ProjectSane/includes/ps/utils/: fileloader.h  keyhandler.h  timer.h
dependencies/linux/glm/glm/: Makefile
dependencies/linux/glm/include/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/linux/projectsane/: removeCpps.sh
dependencies/linux/projectsane/include/ps/: gamebase.h
dependencies/linux/projectsane/include/ps/buffers/: indexbuffer.h  vertexbuffer.h
dependencies/linux/projectsane/include/ps/camera/: camera.h
dependencies/linux/projectsane/include/ps/ecs/: icomponent.h
dependencies/linux/projectsane/include/ps/lights/: point.h  spot.h
dependencies/linux/projectsane/include/ps/managers/: contextmanager.h  shadermanager.h  windowmanager.h
dependencies/linux/projectsane/include/ps/shaders/: shader.h
dependencies/linux/projectsane/include/ps/utils/: mousehandler.h  timer.h
dependencies/mac/glfw/lib/: libglfw.3.3.dylib
dependencies/mac/glfw/lib/pkgconfig/: glfw3.pc
dependencies/mac/projectsane/include/ps/: gamebase.cpp
dependencies/mac/projectsane/include/ps/buffers/: indexbuffer.cpp  vertexbuffer.cpp
dependencies/mac/projectsane/include/ps/camera/: camera.cpp
dependencies/mac/projectsane/include/ps/contexts/: context.cpp  context.h
dependencies/mac/projectsane/include/ps/drawable/: model.cpp  rectangle.cpp  triangle.cpp  triangle.h
dependencies/mac/projectsane/include/ps/ecs/: ecsmanager.cpp  ecsmanager.h  icomponent.cpp  icomponent.h  ientity.h  isystem.h
dependencies/mac/projectsane/include/ps/lights/: point.cpp  spot.cpp
dependencies/mac/projectsane/include/ps/managers/: contextmanager.cpp  memorymanager.cpp  memorymanager.h  shadermanager.cpp  soundmanager.cpp  soundmanager.h  texturemanager.cpp  texturemanager.h  windowmanager.cpp  windowmanager.h
dependencies/windows/freeimage/: FreeImage.dll - Shortcut.lnk
dependencies/windows/glm/: glm_static.lib
dependencies/windows/glm/libs/: dummy.asm  glm_shared.ilk  glm_static.lib
game/: game.cpp  game.h
game/components/: inputcomponent.h  interactioncomponent.h  movementcomponent.h
game/levels/: sandbox.cpp  sandbox.h
game/systems/: inputcontrolsystem.cpp  inputcontrolsystem.h  interactionsystem.cpp  interactionsystem.h  movementsystem.cpp  movementsystem.h
resources/images/: BrickRound0105_5_S.tif  smile.tif  smile2.tif
resources/shaders/: basic.fs  basic.vs  fbo.fs  fbo.vs  shadow.vs
(+42 files in other folders)
